--- a/index.html
+++ b/index.html
@@ -59,6 +59,14 @@
 			}
 		</style>
 		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+
+		<!-- Google Tag Manager -->
+	<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+	new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+	j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+	'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+	})(window,document,'script','dataLayer','GTM-MSNVN94');</script>
+	<!-- End Google Tag Manager -->
 	</head>
 
 	<!-- ///////////////////// NAVBAR START //////////////////////// -->
@@ -95,127 +103,136 @@
 
 
 	<!-- ///////////////////// NAVBAR END //////////////////////// -->
-
-
-	<div class="container">
-	<!-- ///////////////////// ANIMATION BEGIN //////////////////////// -->
-	<div class="video">
-	  	<video muted="" id="video" autoplay="autoplay" loop="loop">
-			<source src="LogoAnimation.mp4" type="video/mp4"></source>
-		</video>
-	</div>
-	<div id="backup-photo">
-
-	</div>
-
-	<!-- ///////////////////// ANIMATION END //////////////////////// -->
-
-
-	<!-- ///////////////////// ANIMATION OVERLAY BEGIN //////////////////////// -->
-	<div class="details">
-		<h2>November 3-5, 2017</h2>
-		<h2>Sonora, CA</h2>	
-	</div>
-	<!-- ///////////////////// ANIMATION OVERLAY END //////////////////////// -->
-	</div>
-	<div class="filler"></div>
-
-	<!-- ///////////////////// ANNOUNCEMENTS BEGIN //////////////////////// -->
-	<div class="announcements">
-
-	</div>
-	<!-- ///////////////////// ANNOUNCEMENTS END //////////////////////// -->
-
-
-	<!-- ///////////////////// SECTION 0 BEGIN  //////////////////////// -->
-	<style>div.line{height: 8px; width: 100%; background: white;}</style>
-	<div class="section0 container-fluid body">
-		<div class="left col-lg-6 col-md-6 col-sm-12 col-xs-12"><img class="left" src="Assets/Left.png" alt=""></div>
-		<div class="right col-lg-6 col-md-6 col-sm-12 col-xs-12"><img class="right" src="Assets/Right.png" alt=""></div>
-	</div>
-	<div class="line"></div>
-	<!-- ///////////////////// SECTION 0 END  //////////////////////// -->
-
-	<div class="background">
-	<!-- ///////////////////// SECTION 1 BEGIN  //////////////////////// -->
-	<div class="section1 body grad">
-		<div class="t L1 col-lg-6 col-md-6 col-sm-12 col-xs-12">
-			<img class="learn icon" src="Assets/Icons/Learn.png" alt="">
-		</div>
-		<div class="R R1 col-lg-6 col-md-6 col-sm-12 col-xs-12">
-			<div class="s">
-				<h1>
-					LEARN
-				</h1>
-				<div class="hover hover1">
-					Offering dozens of informational and interactive workshops, Fall Training Conference provides limitless opportunities to gain knowledge in a wide array of topics like leadership, professionalism, and, of course, all things Circle K! Whether you're hosting a workshop to share your expertise or attending one for the first time, FTC will give you the opportunity to share and experience new perspectives and ideas.
-				</div>
-			</div>
-		</div>
-	</div>
-	<!-- ///////////////////// SECTION 1 END  //////////////////////// -->
-
-	<!-- ///////////////////// SECTION 2 BEGIN  //////////////////////// -->
-	<div class="section2 body grad">
-		<div class="t L L2 col-lg-6 col-md-6 col-sm-12 col-xs-12">
-			<img class="network icon" src="Assets/Icons/Network.png" alt="">
-		</div>
-		<div class="R2 col-lg-6 col-md-6 col-sm-12 col-xs-12">
-			<div class="s network">
-				<h1 class="network">
-					NETWORK
-				</h1> 
-				<div class="hover hover2">
-					As one of our district's premier events, Fall Training Conference provides countless opportunities to meet fellow Circle K members from all over California, Nevada, and Hawaii! With several hundred attendees and a rich, established schedule of activities, FTC is sure to connect you with others just like you. Make new friends, establish new bonds, and expand your Circle K network!
-				</div>
-			</div>
-		</div>
-	</div>
-	<!-- ///////////////////// SECTION 2 END  //////////////////////// -->
-
-	<!-- ///////////////////// SECTION 3 BEGIN  //////////////////////// -->
-	<div class="section3 body grad">
-		<div class="t L3 col-lg-6 col-md-6 col-sm-12 col-xs-12">
-			<img class="welcome icon" src="Assets/Icons/Welcome.png" alt="">
-		</div>
-		<div class="R R3 col-lg-6 col-md-6 col-sm-12 col-xs-12">
-			<div class="s welcome">
-				<h1>
-					WELCOME
-				</h1>
-				<div class="hover hover3">
-					Each year, Fall Training Conference hosts hundreds of new members from clubs and divisions all over CNH. We make it a priority to provide a warm welcome for these members with a new member induction and several activities that allow everyone to gain a better sense of what Circle K International is and what we stand for.
-				</div>
-			</div>
-		</div>
-	</div>
-	<!-- ///////////////////// SECTION 3 END  //////////////////////// -->
 	
-	<!-- ///////////////////// SECTION 4 BEGIN  //////////////////////// -->
-	<div class="section4 body grad">
-		<div class="t L L4 col-lg-6 col-md-6 col-sm-12 col-xs-12">
-			<img class="enjoy icon" src="Assets/Icons/Enjoy.png" alt="">
+	<body>
+		<!-- Google Tag Manager (noscript) -->
+		<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MSNVN94"
+		height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+		<!-- End Google Tag Manager (noscript) -->
+		
+		<div class="container">
+		<!-- ///////////////////// ANIMATION BEGIN //////////////////////// -->
+		<div class="video">
+		  	<video muted="" id="video" autoplay="autoplay" loop="loop">
+				<source src="LogoAnimation.mp4" type="video/mp4"></source>
+			</video>
 		</div>
-		<div class="R4 col-lg-6 col-md-6 col-sm-12 col-xs-12">
-			<div class="s">
-				<h1>
-					ENJOY
-				</h1>
-				<div class="hover hover4">
-					Above all, Fall Training Conference is a time for you to enjoy yourself and create long-lasting memories with your CKI friends! With close team activities, amazing campfire skits, and spirited general sessions, FTC really is a Circle K experience for all to treasure.
+		<div id="backup-photo">
+
+		</div>
+
+		<!-- ///////////////////// ANIMATION END //////////////////////// -->
+
+
+		<!-- ///////////////////// ANIMATION OVERLAY BEGIN //////////////////////// -->
+		<div class="details">
+			<h2>November 3-5, 2017</h2>
+			<h2>Sonora, CA</h2>	
+		</div>
+		<!-- ///////////////////// ANIMATION OVERLAY END //////////////////////// -->
+		</div>
+		<div class="filler"></div>
+
+		<!-- ///////////////////// ANNOUNCEMENTS BEGIN //////////////////////// -->
+		<div class="announcements">
+
+		</div>
+		<!-- ///////////////////// ANNOUNCEMENTS END //////////////////////// -->
+
+
+		<!-- ///////////////////// SECTION 0 BEGIN  //////////////////////// -->
+		<style>div.line{height: 8px; width: 100%; background: white;}</style>
+		<div class="section0 container-fluid body">
+			<div class="left col-lg-6 col-md-6 col-sm-12 col-xs-12"><img class="left" src="Assets/Left.png" alt=""></div>
+			<div class="right col-lg-6 col-md-6 col-sm-12 col-xs-12"><img class="right" src="Assets/Right.png" alt=""></div>
+		</div>
+		<div class="line"></div>
+		<!-- ///////////////////// SECTION 0 END  //////////////////////// -->
+
+		<div class="background">
+		<!-- ///////////////////// SECTION 1 BEGIN  //////////////////////// -->
+		<div class="section1 body grad">
+			<div class="t L1 col-lg-6 col-md-6 col-sm-12 col-xs-12">
+				<img class="learn icon" src="Assets/Icons/Learn.png" alt="">
+			</div>
+			<div class="R R1 col-lg-6 col-md-6 col-sm-12 col-xs-12">
+				<div class="s">
+					<h1>
+						LEARN
+					</h1>
+					<div class="hover hover1">
+						Offering dozens of informational and interactive workshops, Fall Training Conference provides limitless opportunities to gain knowledge in a wide array of topics like leadership, professionalism, and, of course, all things Circle K! Whether you're hosting a workshop to share your expertise or attending one for the first time, FTC will give you the opportunity to share and experience new perspectives and ideas.
+					</div>
 				</div>
 			</div>
 		</div>
-	</div>
-	<!-- ///////////////////// SECTION 4 END  //////////////////////// -->
+		<!-- ///////////////////// SECTION 1 END  //////////////////////// -->
+
+		<!-- ///////////////////// SECTION 2 BEGIN  //////////////////////// -->
+		<div class="section2 body grad">
+			<div class="t L L2 col-lg-6 col-md-6 col-sm-12 col-xs-12">
+				<img class="network icon" src="Assets/Icons/Network.png" alt="">
+			</div>
+			<div class="R2 col-lg-6 col-md-6 col-sm-12 col-xs-12">
+				<div class="s network">
+					<h1 class="network">
+						NETWORK
+					</h1> 
+					<div class="hover hover2">
+						As one of our district's premier events, Fall Training Conference provides countless opportunities to meet fellow Circle K members from all over California, Nevada, and Hawaii! With several hundred attendees and a rich, established schedule of activities, FTC is sure to connect you with others just like you. Make new friends, establish new bonds, and expand your Circle K network!
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- ///////////////////// SECTION 2 END  //////////////////////// -->
+
+		<!-- ///////////////////// SECTION 3 BEGIN  //////////////////////// -->
+		<div class="section3 body grad">
+			<div class="t L3 col-lg-6 col-md-6 col-sm-12 col-xs-12">
+				<img class="welcome icon" src="Assets/Icons/Welcome.png" alt="">
+			</div>
+			<div class="R R3 col-lg-6 col-md-6 col-sm-12 col-xs-12">
+				<div class="s welcome">
+					<h1>
+						WELCOME
+					</h1>
+					<div class="hover hover3">
+						Each year, Fall Training Conference hosts hundreds of new members from clubs and divisions all over CNH. We make it a priority to provide a warm welcome for these members with a new member induction and several activities that allow everyone to gain a better sense of what Circle K International is and what we stand for.
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- ///////////////////// SECTION 3 END  //////////////////////// -->
+		
+		<!-- ///////////////////// SECTION 4 BEGIN  //////////////////////// -->
+		<div class="section4 body grad">
+			<div class="t L L4 col-lg-6 col-md-6 col-sm-12 col-xs-12">
+				<img class="enjoy icon" src="Assets/Icons/Enjoy.png" alt="">
+			</div>
+			<div class="R4 col-lg-6 col-md-6 col-sm-12 col-xs-12">
+				<div class="s">
+					<h1>
+						ENJOY
+					</h1>
+					<div class="hover hover4">
+						Above all, Fall Training Conference is a time for you to enjoy yourself and create long-lasting memories with your CKI friends! With close team activities, amazing campfire skits, and spirited general sessions, FTC really is a Circle K experience for all to treasure.
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- ///////////////////// SECTION 4 END  //////////////////////// -->
+		
+		<!-- ///////////////////// SECTION 5 BEGIN  //////////////////////// -->
+		<div class="section5 container-fluid body">
+			<img class="LS" src="Assets/Landscapes/1.png" alt="">
+		</div>
+		<!-- ///////////////////// SECTION 5 END  //////////////////////// -->
+		
+		</div>
+		
+	</body>
+
 	
-	<!-- ///////////////////// SECTION 5 BEGIN  //////////////////////// -->
-	<div class="section5 container-fluid body">
-		<img class="LS" src="Assets/Landscapes/1.png" alt="">
-	</div>
-	<!-- ///////////////////// SECTION 5 END  //////////////////////// -->
-	
-	</div>
 	
 
 </html>
