--- a/documents.html
+++ b/documents.html
@@ -11,6 +11,14 @@
 
 		<meta name="DOWNLOADport" content="width=device-width, initial-scale=1">
 		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+
+		<!-- Google Tag Manager -->
+		<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+		new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+		j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+		'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+		})(window,document,'script','dataLayer','GTM-MSNVN94');</script>
+		<!-- End Google Tag Manager -->
 	</head>
 
 	<!-- ///////////////////// NAVBAR START //////////////////////// -->
@@ -49,6 +57,12 @@
 	<!-- ///////////////////// NAVBAR END //////////////////////// -->
 
 	<body>
+
+	<!-- Google Tag Manager (noscript) -->
+	<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MSNVN94"
+	height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+	<!-- End Google Tag Manager (noscript) -->
+	
 	<div class="background">
 	<div class="padding">
 
