--- a/committee.html
+++ b/committee.html
@@ -28,8 +28,8 @@
 		  ga('create', 'UA-106003264-1', 'auto');
 		  ga('send', 'pageview');
 		</script>
-		
-		<!-- Google Tag Manager -->
+
+		<!-- Google Tag Manager 
 		<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 		new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
 		j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
