--- a/documents.html
+++ b/documents.html
@@ -256,7 +256,7 @@
 	    <p>
 	    <ul>
 		    <li>Applications Due: September 18th @ 11:59PM PST</li>
-		    <li>Applicant InterDOWNLOADs: September 24th – 28th</li>
+		    <li>Applicant Interviews: September 24th – 28th</li>
 		    <li>Announcement of Workshop Hosts: October 2nd</li>
 		    <li>First Draft of Literature/Presentation & Second Draft of Outline Due: October 9th</li>
 		    <li>Revision Period/Group Meetings: October 10th – 19th</li>
@@ -284,8 +284,8 @@
 	    <ul>
 		    <li>Application Process: Monday, September 4th, 2017 – Thursday, October 5th, 2017</li>
 		    <li>Applicants shall submit Forms by Thursday, October 5th, 2017 @ 11:59 PM</li>
-		    <li>Applicants shall be contacted for an interDOWNLOAD by Saturday, October 7th, 2017</li>
-		    <li>InterDOWNLOADs will take place from Sunday, October 8th, 2017 - Wednesday, October 11th, 2017</li>
+		    <li>Applicants shall be contacted for an interview by Saturday, October 7th, 2017</li>
+		    <li>interviews will take place from Sunday, October 8th, 2017 - Wednesday, October 11th, 2017</li>
 		    <li>Team Captains will be announced on Thursday, October 12th, 2017</li>
 	    </ul>
 	    </p>
@@ -491,9 +491,9 @@
 	    <ul>
 		    <li>Application Process: Monday, September 4th, 2017 - Saturday, September 23rd, 2017</li>
 		    <li>Applicants shall submit forms by Saturday, September 23rd, 2017 @ 11:59 PM</li>
-		    <li>Selected Applicants shall be contacted for an interDOWNLOAD by Wednesday, September 27th, 2017</li>
-		    <li>InterDOWNLOADs for selected applicants shall take place from Thursday, September 28th, 2017 to Wednesday, October 3th, 2017</li>
-		    <li>Applicants who were selected for interDOWNLOADs shall submit final set of music Thursday, October 5th, 2017</li>
+		    <li>Selected Applicants shall be contacted for an interview by Wednesday, September 27th, 2017</li>
+		    <li>interviews for selected applicants shall take place from Thursday, September 28th, 2017 to Wednesday, October 3th, 2017</li>
+		    <li>Applicants who were selected for interviews shall submit final set of music Thursday, October 5th, 2017</li>
 		    <li>DJ shall be chosen Tuesday, October 10th, 2017</li>
 	    </ul>
 	    </p>
