--- a/documents.html
+++ b/documents.html
@@ -519,7 +519,8 @@
 		<div class="DLOH">
 			<ul>
 				<li>All Deadlines are 11:59pm PST except for Campfire Skit and Talent Act Applications due at 10pm PST</li>
-				<li>All Office Hours are at night (pm, PST)</li>
+				<li>Head over to Office Hours if you have questions about any of the above!</li>
+				<li>All Office Hours are during the night (pm, PST) at <a class="lightblue" href="https://tinyurl.com/ftc17oh">tinyurl.com/ftc17oh</a></li>
 			</ul>
 		</div>
 			<div class="September m">	
