--- a/documents.html
+++ b/documents.html
@@ -503,6 +503,8 @@
 			<ul>
 				<li>Tue, 9/5 | 5-6pm</li>
 				<li>Thu, 9/14 | 5-6pm</li>
+				<li>Tue, 9/19 | 10-11pm</li>
+				<li>Fri, 9/22 | 9-10pm</li>
 			</ul>
 		</p>
 	    <a target="_blank" href="Forms/FTC2017_DJ_Application.docx" class="btn btn-default" id="download-button" target="_blank" role="button">DOWNLOAD .DOCX</a>
@@ -567,10 +569,10 @@
 					  <li>16</li>
 					  <li class="DL">17 <p>Workshop Host Application Due</p></li>
 					  <li>18</li>
-					  <li class="DL">19 <p>Program Ad Form Due</p></li>
+					  <li class="both"><div class="upper">19 <p>Program Ad Form Due</p></div><div class="lower"><p>10-11 Entmt & Dining</p></div></li>
 					  <li>20</li>
 					  <li>21</li>
-					  <li>22</li>
+					  <li class="OH">22 <p>9-10 Entertainment & Dining</p></li>
 					  <li class="DL">23 <p>DJ Application Due</p></li>
 					  <li>24</li>
 					  <li>25</li>
