--- a/index.html
+++ b/index.html
@@ -184,6 +184,12 @@
 	      <a href="https://www.youtube.com/watch?v=GzP_9mS0rog" target="_blank"><img class="slideshow" src="Assets/Slideshow/theme-reveal.png" style="width: 70%" alt="Theme Reveal"></a>
 	    </div>
 	    </div>
+
+	    <div class="item container-fluid">
+	    <div class="ctf">
+	      <a href="https://www.youtube.com/watch?v=1YKH8DEwRe8" target="_blank"><img class="slideshow" src="Assets/Slideshow/call-to-ftc.png" style="width: 60%" alt="Call to FTC"></a>
+	    </div>
+	    </div>
 	  <!-- Left and right controls -->
 	  <a class="left carousel-control" href="#myCarousel" data-slide="prev">
 	    <span class="glyphicon glyphicon-chevron-left"></span>
