--- a/index.html
+++ b/index.html
@@ -181,13 +181,13 @@
 
 	    <div class="item container-fluid">
 	    <div class="tr">
-	      <a href="https://www.youtube.com/watch?v=GzP_9mS0rog" target="_blank"><img class="slideshow" src="Assets/Slideshow/theme-reveal.png" style="width: 70%" alt="Theme Reveal"></a>
+	      <a href="https://www.youtube.com/watch?v=GzP_9mS0rog" target="_blank"><img class="slideshow tr" src="Assets/Slideshow/theme-reveal.png" style="width: 70%" alt="Theme Reveal"></a>
 	    </div>
 	    </div>
 
 	    <div class="item container-fluid">
 	    <div class="ctf">
-	      <a href="https://www.youtube.com/watch?v=1YKH8DEwRe8" target="_blank"><img class="slideshow" src="Assets/Slideshow/call-to-ftc.png" style="width: 60%" alt="Call to FTC"></a>
+	      <a href="https://www.youtube.com/watch?v=1YKH8DEwRe8" target="_blank"><img class="slideshow ctf" src="Assets/Slideshow/call-to-ftc.png" style="width: 60%" alt="Call to FTC"></a>
 	    </div>
 	    </div>
 	  <!-- Left and right controls -->
@@ -203,7 +203,7 @@
 
 	<script>
 		$('.carousel').carousel({
-		  interval: 50000 * 10
+		  interval: 500 * 10
 		});
 	</script>
 	<!-- ///////////////////// SLIDESHOW END //////////////////////// -->
