Workshops Extended Graphic

--- a/index.html
+++ b/index.html
@@ -162,10 +162,17 @@
 	    </div>
 
 	    <div class="item">
+	    	<div class="wext">
+	     	 <a href="Forms/FTC2017_Workshops_Application.docx" target="_blank"><img class="slideshow" src="Assets/Slideshow/workshops-extended.jpg" alt="Workshop Application Extended!"></a>
+	    	</div>
+	    </div>
+
+	    <div class="item">
 	    	<div class="imd">
 	     	 <a href="Assets/Slideshow/important-deadlines.png" target="_blank"><img class="slideshow" src="Assets/Slideshow/important-deadlines.png" alt="Important Deadlines"></a>
 	    	</div>
 	    </div>
+
 
 	    <div class="item">
 	    	<div class="oh">
