--- a/index.html
+++ b/index.html
@@ -162,35 +162,48 @@
 	    </div>
 
 	    <div class="item">
-	    	<div class="imd">
-	     	 <a href="Assets/Slideshow/important-deadlines.png" target="_blank"><img class="slideshow" src="Assets/Slideshow/important-deadlines.png" alt="Important Deadlines"></a>
+	    	<div class="imd" style="width: 50%; float: left;">
+	     	 <a href="Assets/Slideshow/important-deadlines.png" target="_blank"><img class="slideshow dbl" style="margin-left: 10%" src="Assets/Slideshow/important-deadlines.png" alt="Important Deadlines"></a>
+	    	</div>
+
+	    	<div class="oh" style="width: 50%; float: right;">
+	     	 <a href="Assets/Slideshow/officehours-square.png" target="_blank"><img class="slideshow dbl" style="margin-right: 10%" src="Assets/Slideshow/officehours-square.png" alt="Office Hours"></a>
 	    	</div>
 	    </div>
-
 
 	    <div class="item">
-	    	<div class="oh">
-	     	 <a href="Assets/Slideshow/officehours-square.png" target="_blank"><img class="slideshow" src="Assets/Slideshow/officehours-square.png" alt="Office Hours"></a>
-	    	</div>
-	    </div>
-
-	    <div class="item container-fluid">
 	    <div class="ss">
 	      <a href="https://docs.google.com/forms/d/e/1FAIpQLSeu23F6eIdOFAIP6uHLDmxdcF70ZxNrsJDJL7FgG6NAchuiyQ/viewform" target="_blank"><img class="slideshow" src="Assets/Slideshow/safari-sundays.png" alt="Safari Sundays"></a>
 	    </div>
 	    </div>
 
-	    <div class="item container-fluid">
+	    <div class="item">
+	    	<div class="cpf1" style="width: 40%; float: left;">
+				<a href="Assets/Slideshow/campfire-graphic.jpg" target="_blank"><img class="cpf1 slideshow" src="Assets/Slideshow/campfire-graphic.jpg" style="width: 75%; margin-left: 15%" alt=""></a>
+	    	</div>
+			<div class="cpf2" style="width: 60%; float: right;">
+	     		 <a href="https://www.youtube.com/watch?v=A10b6cKcrR4" target="_blank"><img class="slideshow" src="Assets/Slideshow/campfire-talent.png" style="width: 86%" alt="Important Deadlines"></a>
+	     	</div>
+	    </div>
+
+	    <div class="item">
+	    	<div class="saa">
+	     	 <a href="https://www.youtube.com/watch?v=L5LRwiRHkMM" target="_blank"><img class="slideshow" src="Assets/Slideshow/message-saa.png" style="width: 60%" alt="Important Deadlines"></a>
+	    	</div>
+	    </div>
+
+	    <div class="item">
+	    <div class="ctf">
+	      <a href="https://www.youtube.com/watch?v=1YKH8DEwRe8" target="_blank"><img class="slideshow ctf" src="Assets/Slideshow/call-to-ftc.png" style="width: 60%" alt="Call to FTC"></a>
+	    </div>
+	    </div>
+
+	    <div class="item">
 	    <div class="tr">
 	      <a href="https://www.youtube.com/watch?v=GzP_9mS0rog" target="_blank"><img class="slideshow tr" src="Assets/Slideshow/theme-reveal.png" style="width: 70%" alt="Theme Reveal"></a>
 	    </div>
 	    </div>
 
-	    <div class="item container-fluid">
-	    <div class="ctf">
-	      <a href="https://www.youtube.com/watch?v=1YKH8DEwRe8" target="_blank"><img class="slideshow ctf" src="Assets/Slideshow/call-to-ftc.png" style="width: 60%" alt="Call to FTC"></a>
-	    </div>
-	    </div>
 	  <!-- Left and right controls -->
 	  <a class="left carousel-control" href="#myCarousel" data-slide="prev">
 	    <span class="glyphicon glyphicon-chevron-left"></span>
@@ -204,7 +217,7 @@
 
 	<script>
 		$('.carousel').carousel({
-		  interval: 500 * 10
+		  interval: 800 * 10
 		});
 
 	</script>
