--- a/documents.html
+++ b/documents.html
@@ -258,36 +258,46 @@
 	    </p>
 	      <a target="_blank" href="Forms/FTC2017_Team_Captain_Application.docx" class="btn btn-default" id="download-button" target="_blank" role="button">DOWNLOAD .DOCX</a>
 	    </div>
-	<!-- ///////////////////// MEDIA COMMITTEE //////////////////////// 
+	<!-- ///////////////////// MEDIA CREW //////////////////////// -->
 	    <div class="downloads-panel">
-	      <a href="#media" data-parent="#accordion" data-toggle="collapse">MEDIA COMMITTEE</a>
-	          <a target="_blank" href="Forms/FTC2017_Media_Committee_Application.docx"><img align = "right" src="Assets/Download.png" class="DL" alt=DOWNLOAD_BUTTON /></a>
+	      <a href="#media" data-parent="#accordion" data-toggle="collapse">MEDIA CREW</a>
+	          <a target="_blank" href="https://tinyurl.com/ftcmedia"><img align = "right" src="Assets/Link.png" class="DL" alt=DOWNLOAD_BUTTON /></a>
 	    </div>
 	    <div id="media" class="collapse download-body">
-	    <p>
-	      In applying for Media Committee, you will have the opportunity to be a photographer/videographer during FTC! You will also be responsible for two things:
-	      </p>
-	      <ol>
-	        <li>
-	          Collecting videos and photos from your assigned division. These will be used for the opening slideshow for FTC! I will be providing you with an application for submissions for the opening slideshows to share with your assigned divisions.
-	        </li>
-	        <li>
-	          Filming and taking pictures of all the memories that will be happening at FTC! These include the team games, campfire skits, workshops, opening ceremony, and more! These will be used for the closing slideshow of FTC! You can submit your photos and footage inside the registration building.
-	        </li>
-	      </ol>
+	      <p>
+Individuals will be in charge of taking pictures or recording footage to be used in the ending slideshow. All levels of experience are accepted. There will be an online meeting between all Media Crew members the week before Fall Training Conference with distribution of roles, necessary training, and further information (date and time will be based of everyone's availability). If you have any questions, comments, or concerns, feel free to contact Media Chair Jennifer Nguyen at <a class="lightblue" href="mailto: ftc.mediachair@gmail.com"><strong>ftc.mediachair@gmail.com</strong></a> </p>
 	    <p>
 	      <strong>Application Timeline</strong>
 	    </p>
 	    <p>
 	    <ul>
-		    <li>Application Procress: Thursday, September 1st, 2017 - Friday, September 30th 2017</li>
-		    <li>Applicants shall submit Forms by Friday, September 30th, 2017 @ 11:59 PM</li>
-		    <li>Applicants shall be contacted and announced by Monday, October 3rd, 2017</li>
-		    <li>Opening slideshows submissions open from Monday, October 3rd, 2017 – Sunday, October 23rd, 2017</li>
+		    <li>Applicants shall submit Forms by Friday, October 20th, 2017 @ 11:59 PM</li>
 	    </ul>
 	    </p>
-	      <a target="_blank" href="Forms/FTC2017_Media_Committee_Application.docx" class="btn btn-default" id="download-button" target="_blank" role="button">DOWNLOAD .DOCX</a>
-	    </div>-->
+	      <a target="_blank" href="https://tinyurl.com/ftcmedia" class="btn btn-default" id="download-button" target="_blank" role="button">GO TO FORM</a>
+	    </div>
+	<!-- ///////////////////// OPENING SLIDESHOW //////////////////////// -->
+	    <div class="downloads-panel long">
+	      <a href="#slideshow" data-parent="#accordion" data-toggle="collapse">OPENING SLIDESHOW SUBMISSIONS</a>
+	          <a target="_blank" href="https://drive.google.com/drive/folders/0B3FBTrk2xv7QeENUbk9jVVJNQkU?usp=sharing"><img align = "right" src="Assets/Link.png" class="DL" alt=DOWNLOAD_BUTTON /></a>
+	    </div>
+	    <div id="slideshow" class="collapse download-body">
+	    <p>
+	    Thank you for taking the time to submit photos/videos for this year’s Opening Slideshow at FTC! Without your contribution, this slideshow would not be possible! Please follow the instructions below to upload your photos and videos for the Opening Slideshow at FTC.
+	    </p>
+        <ol>
+	    	<li>Log into your Gmail account.</li>
+	        <li>Visit the link above.</li>
+	        <li>Visit the Google Drive folder that the content is related to (i.e. your division).</li>
+	        <li>Upload the photos/videos in the correct folder by dragging them into the folder or using the “New” button.</li>
+	        <li>If you have any questions, comments, or concerns, feel free to contact <a class="lightblue" href="mailto: ftc.mediachair@gmail.com"><strong>ftc.mediachair@gmail.com</strong></a></li>
+	    </ol>
+	    <p>
+	      If files are too large, please send them thru <a class="lightblue" href="wetransfer.com">wetransfer.com</a> to ftc.mediachair@gmail.com. <br>
+		  Submissions are due <strong>Friday, October 13th, 2017 @ 11:59PM!</strong>
+	    </p>
+	    <a target="_blank" href="https://drive.google.com/drive/folders/0B3FBTrk2xv7QeENUbk9jVVJNQkU?usp=sharing" class="btn btn-default" id="download-button" target="_blank" role="button">GO TO DRIVE FOLDER</a>
+	    </div>
 	<!-- ///////////////////// CAMPFIRE SKITS //////////////////////// -->
 	    <div class="downloads-panel">
 	      <a href="#campfire" data-parent="#accordion" data-toggle="collapse">CAMPFIRE SKIT APPLICATION</a>
@@ -392,28 +402,6 @@
 
 	      <a target="_blank" href="Forms/FTC2017_Program_Ad_Form.docx" class="btn btn-default" id="download-button" target="_blank" role="button">DOWNLOAD .DOCX</a>
 	      
-	    </div>
-	<!-- ///////////////////// OPENING SLIDESHOW //////////////////////// -->
-	    <div class="downloads-panel long">
-	      <a href="#slideshow" data-parent="#accordion" data-toggle="collapse">OPENING SLIDESHOW SUBMISSIONS</a>
-	          <a target="_blank" href="https://drive.google.com/drive/folders/0B3FBTrk2xv7QeENUbk9jVVJNQkU?usp=sharing"><img align = "right" src="Assets/Link.png" class="DL" alt=DOWNLOAD_BUTTON /></a>
-	    </div>
-	    <div id="slideshow" class="collapse download-body">
-	    <p>
-	    Thank you for taking the time to submit photos/videos for this year’s Opening Slideshow at FTC! Without your contribution, this slideshow would not be possible! Please follow the instructions below to upload your photos and videos for the Opening Slideshow at FTC.
-	    </p>
-        <ol>
-	    	<li>Log into your Gmail account.</li>
-	        <li>Visit the link above.</li>
-	        <li>Visit the Google Drive folder that the content is related to (i.e. your division).</li>
-	        <li>Upload the photos/videos in the correct folder by dragging them into the folder or using the “New” button.</li>
-	        <li>If you have any questions, comments, or concerns, feel free to contact <a class="lightblue" href="mailto: ftc.mediachair@gmail.com"><strong>ftc.mediachair@gmail.com</strong></a></li>
-	    </ol>
-	    <p>
-	      If files are too large, please send them thru <a class="lightblue" href="wetransfer.com">wetransfer.com</a> to ftc.mediachair@gmail.com. <br>
-		  Submissions are due <strong>Friday, October 13th, 2017 @ 11:59PM!</strong>
-	    </p>
-	    <a target="_blank" href="https://drive.google.com/drive/folders/0B3FBTrk2xv7QeENUbk9jVVJNQkU?usp=sharing" class="btn btn-default" id="download-button" target="_blank" role="button">GO TO DRIVE FOLDER</a>
 	    </div>
 	<!-- ///////////////////// CLUB PUBLICITY CHECKLIST //////////////////////// 
 	    </div>
