--- a/index.html
+++ b/index.html
@@ -162,6 +162,12 @@
 	    </div>
 
 	    <div class="item">
+	    	<div class="ear">
+				<a href="Forms/FTC2017_REGISTRATION_GUIDE.pdf" target="_blank"><img class="cpf1 slideshow" src="Assets/Slideshow/early-registration.jpg" alt=""></a>
+	    	</div>
+	    </div>
+
+	    <div class="item">
 	    	<div class="imd" style="width: 50%; float: left;">
 	     	 <a href="Assets/Slideshow/important-deadlines.png" target="_blank"><img class="slideshow dbl" style="margin-left: 10%" src="Assets/Slideshow/important-deadlines.png" alt="Important Deadlines"></a>
 	    	</div>
@@ -171,24 +177,10 @@
 	    	</div>
 	    </div>
 
-	    <div class="item">
-	    <div class="ss">
-	      <a href="https://docs.google.com/forms/d/e/1FAIpQLSeu23F6eIdOFAIP6uHLDmxdcF70ZxNrsJDJL7FgG6NAchuiyQ/viewform" target="_blank"><img class="slideshow" src="Assets/Slideshow/safari-sundays.png" alt="Safari Sundays"></a>
-	    </div>
-	    </div>
 
 	    <div class="item">
-	    	<div class="cpf1" style="width: 40%; float: left;">
-				<a href="Assets/Slideshow/campfire-graphic.jpg" target="_blank"><img class="cpf1 slideshow" src="Assets/Slideshow/campfire-graphic.jpg" style="width: 75%; margin-left: 15%" alt=""></a>
-	    	</div>
-			<div class="cpf2" style="width: 60%; float: right;">
-	     		 <a href="https://www.youtube.com/watch?v=A10b6cKcrR4" target="_blank"><img class="slideshow" src="Assets/Slideshow/campfire-talent.png" style="width: 86%" alt="Important Deadlines"></a>
-	     	</div>
-	    </div>
-
-	    <div class="item">
-	    	<div class="saa">
-	     	 <a href="https://www.youtube.com/watch?v=L5LRwiRHkMM" target="_blank"><img class="slideshow" src="Assets/Slideshow/message-saa.png" style="width: 60%" alt="Important Deadlines"></a>
+	    	<div class="cpf1">
+				<a href="Assets/Slideshow/campfire-graphic.jpg" target="_blank"><img class="cpf1 slideshow" src="Assets/Slideshow/campfire-graphic.jpg" alt=""></a>
 	    	</div>
 	    </div>
 
@@ -198,9 +190,15 @@
 	    </div>
 	    </div>
 
+		<div class="item">
+	    <div class="fvp">
+	      <a href="https://www.youtube.com/playlist?list=PLYfMJoKpmeRrx80190uzhFIQ9teseBQGm" target="_blank"><img class="slideshow fvp" src="Assets/Slideshow/ftc-video-playlist.png" style="width: 60%" alt="FTC Video Playlist"></a>
+	    </div>
+	    </div>
+
 	    <div class="item">
-	    <div class="tr">
-	      <a href="https://www.youtube.com/watch?v=GzP_9mS0rog" target="_blank"><img class="slideshow tr" src="Assets/Slideshow/theme-reveal.png" style="width: 70%" alt="Theme Reveal"></a>
+	    <div class="ss">
+	      <a href="https://docs.google.com/forms/d/e/1FAIpQLSeu23F6eIdOFAIP6uHLDmxdcF70ZxNrsJDJL7FgG6NAchuiyQ/viewform" target="_blank"><img class="slideshow" src="Assets/Slideshow/safari-sundays.png" alt="Safari Sundays"></a>
 	    </div>
 	    </div>
 
