Packing List Updated

--- a/committee.html
+++ b/committee.html
@@ -135,7 +135,7 @@
 		    <div class="col-lg-3 col-md-4 col-sm-6 text-center profile">
 		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Cropped/Christina.png" onmouseover="this.src='Assets/Committee/Schools/UCD.png'" onmouseout="this.src='Assets/Committee/Cropped/Christina.png'" />
 		      <h3>CHRISTINA CHU</h3>
-		      <h4>Entertainment</h4>
+		      <h4>Entertainment & Dining</h4>
 		      <h4>ftc.entertainments@gmail.com</h4>
 		    </div>
 		    <div class="col-lg-3 col-md-4 col-sm-6 text-center profile">
