--- a/article.html
+++ b/article.html
@@ -76,7 +76,8 @@
 		<div class="background">
 			<div class="inner">
 				<div class="content">
-					<h1 id="title">12 Reasons Why FTC 2017 Will Be THE Event of The Year</h1>
+					<h1 id="title">10 THINGS TO EXPECT AT FTC 2017</h1>
+					<p>Prepared to make the trek to Sonora this weekend? To hype you up, here’s a preview of what will be able to experience when you go Into The Wild with CNH Circle K at this year’s Fall Training Conference!</p>
 					<ol>
 						<li>Bond with fellow club members during the car trip!</li>
 						<img src="Assets/Buzzfeed/1.gif" alt="" class="imgs">
