Change 5th picture on article

--- a/article.html
+++ b/article.html
@@ -88,7 +88,7 @@
 						<li>Experience what the wilderness is like in the great outdoors of Sonora!</li>
 						<img src="Assets/Buzzfeed/4.gif" alt="" class="imgs">
 						<li>Showcase your Circle K spirit at upbeat general sessions with hundreds of other members (and lose your voice in the process).</li>
-						<img src="Assets/Buzzfeed/5.PNG" alt="" class="imgs">
+						<img src="Assets/Buzzfeed/5.jpg" alt="" class="imgs">
 						<li>Experience PLUR at its finest!</li>
 						<img src="Assets/Buzzfeed/6.PNG" alt="" class="imgs">
 						<li> Dance the night away with one of the top DJs in CNH!</li>
