--- a/home.html
+++ b/home.html
@@ -36,6 +36,10 @@
 
 		<body>
 			<div class="background">
+				<div class="top"><a class="white" href="index.html">View Pre-Event Website</a></div>
+
+				<div class="filler1"></div>
+
 				<div class="thanks">
 					<img src="Assets/after1.png" alt="" class="thx">
 				</div>
@@ -46,8 +50,10 @@
 				</div>
 				
 				<div class="video">
-					<iframe width="600" height="350" src="https://www.youtube.com/embed/Mqj78uQDrF4" frameborder="0" allowfullscreen></iframe>
+					<iframe width="60%" height="400" src="https://www.youtube.com/embed/Mqj78uQDrF4" frameborder="0" allowfullscreen></iframe>
 				</div>
+
+				<div class="filler2"></div>
 
 				<div class="bottom">
 					<img src="Assets/after2.png" alt="" class="btm">
